add more blocks

--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.coolmod.cool": "Cool",
-  "itemgroup.cool": "Cool"
+  "itemgroup.cool": "Cool",
+  "block.coolmod.cool_block": "Cool Block",
+  "block.coolmod.bright_block": "Bright Block"
 }
