--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.coolmod.cool": "Cool",
   "itemgroup.cool": "Cool",
   "block.coolmod.cool_block": "Cool Block",
-  "block.coolmod.bright_block": "Bright Block"
+  "block.coolmod.bright_block": "Bright Block",
+  "block.coolmod.ice_bricks": "Ice Bricks"
 }
