Added some things

--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.coolmod.cool": "Cool",
+  "item.coolmod.cool_sunglasses": "Cool Sunglasses",
   "itemgroup.cool": "Cool",
   "block.coolmod.cool_block": "Cool Block",
   "block.coolmod.bright_block": "Bright Block",
@@ -9,5 +10,6 @@
   "block.coolmod.ice_door": "Ice Door",
   "block.coolmod.ice_trapdoor": "Ice Bricks Trapdoor",
   "block.coolmod.ice_pressure_plate": "Ice Pressure Plate",
-  "block.coolmod.ice_bricks_wall": "Ice Bricks Wall"
+  "block.coolmod.ice_bricks_wall": "Ice Bricks Wall",
+  "block.coolmod.ice_button": "Ice Bricks Wall"
 }
