--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.coolmod.cool": "Cool",
   "item.coolmod.cool_sunglasses": "Cool Sunglasses",
+  "effect.coolmod.frozen": "Frozen",
   "itemgroup.cool": "Cool",
   "block.coolmod.cool_block": "Cool Block",
   "block.coolmod.bright_block": "Bright Block",
