--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -12,5 +12,5 @@
   "block.coolmod.ice_trapdoor": "Ice Bricks Trapdoor",
   "block.coolmod.ice_pressure_plate": "Ice Pressure Plate",
   "block.coolmod.ice_bricks_wall": "Ice Bricks Wall",
-  "block.coolmod.ice_button": "Ice Bricks Wall"
+  "block.coolmod.ice_button": "Ice Button"
 }
