Add entity animations

--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -2,12 +2,13 @@
   "item.coolmod.cool": "Cool",
   "item.coolmod.cool_sunglasses": "Cool Sunglasses",
   "effect.coolmod.frozen": "Frozen",
+  "entity.coolmod.iceologer": "Iceologer",
   "itemgroup.cool": "Cool",
   "block.coolmod.cool_block": "Cool Block",
   "block.coolmod.bright_block": "Bright Block",
   "block.coolmod.ice_bricks": "Ice Bricks",
   "block.coolmod.ice_bricks_slab": "Ice Bricks Slab",
-  "block.coolmod.ice_bricks_stair": "Ice Bricks Stair",
+  "block.coolmod.ice_bricks_stairs": "Ice Bricks Stairs",
   "block.coolmod.ice_door": "Ice Door",
   "block.coolmod.ice_trapdoor": "Ice Bricks Trapdoor",
   "block.coolmod.ice_pressure_plate": "Ice Pressure Plate",
