--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -7,6 +7,7 @@
   "block.coolmod.cool_block": "Cool Block",
   "block.coolmod.bright_block": "Bright Block",
   "block.coolmod.ice_bricks": "Ice Bricks",
+  "block.coolmod.icicle": "Icicle",
   "block.coolmod.ice_bricks_slab": "Ice Bricks Slab",
   "block.coolmod.ice_bricks_stairs": "Ice Bricks Stairs",
   "block.coolmod.ice_door": "Ice Door",
