--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "item.coolmod.cool": "Cool",
   "item.coolmod.cool_sunglasses": "Cool Sunglasses",
-  "effect.coolmod.frozen": "Frozen",
+  "effect.coolmod.freeze": "Frozen",
   "entity.coolmod.iceologer": "Iceologer",
   "itemgroup.cool": "Cool",
   "block.coolmod.cool_block": "Cool Block",
