--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.coolmod.cool": "Cool",
   "item.coolmod.cool_sunglasses": "Cool Sunglasses",
+  "item.coolmod.coolberry_icecream": "Coolberry Icecream",
   "effect.coolmod.freeze": "Frozen",
   "entity.coolmod.iceologer": "Iceologer",
   "itemgroup.cool": "Cool",
