Liquid Nitrogen #1 fix crash

--- a/src/main/resources/assets/coolmod/lang/en_us.json
+++ b/src/main/resources/assets/coolmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.coolmod.cool": "Cool",
   "item.coolmod.cool_sunglasses": "Cool Sunglasses",
   "item.coolmod.coolberry_icecream": "Coolberry Icecream",
+  "item.coolmod.liquid_nitrogen_bucket": "Bucket of Liquid Nitrogen",
   "effect.coolmod.freeze": "Frozen",
   "entity.coolmod.iceologer": "Iceologer",
   "itemgroup.cool": "Cool",
